<resources>
    <string name="app_name">Note</string>

    <string name="action_settings">Settings</string>
    <!-- 登录相关 -->
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="sign_up_now">立即注册</string>
    <string name="verification_code">短信验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="find_psw">找回密码</string>
    <string name="verification_code_sign_in">短信验证码登录</string>
    <string name="cancel">取消</string>
    <string name="login_with_psw">密码登录</string>
    <string name="psw_can_not_be_null">密码不能为空</string>
    <string name="psw_is_different">密码不一致</string>
    <string name="phone_can_not_be_null">手机号不能为空</string>
    <string name="phone_invalidate">手机号格式不正确</string>
    <string name="code_can_not_be_null">验证码不能为空</string>
    <string name="no_network">网络已断开</string>
    <string name="sign_up_fail">注册失败</string>
    <string name="reset_password_fail">重置密码失败</string>
    <string name="account_psw_error">账号或密码错误</string>
    <string name="account_code_error">账号或验证码错误</string>
    <string name="login_success">登录成功</string>
    <string name="sign_up_account">账号注册</string>
    <string name="reset_password">重置密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="get_code_failed">请求验证码失败,请检查网络</string>
    <string name="sign_in_failed">登录失败</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="username">userName</string>
    <string name="account_type">account type</string>
    <string name="profile">档案</string>
    <string name="account">账号</string>
    <string name="change_your_passowrd">更改您的密码</string>

    <!--Photo-->
    <string name="ucrop_rotate">旋转</string>
    <string name="ucrop_scale">缩放</string>
    <string name="ucrop_crop">裁剪</string>

    <!--Profile-->
    <string name="name">名字</string>
    <string name="avatar">头像</string>
    <string name="use_image_as_avatar">您可以使用自定义图片作为头像</string>
    <string name="delete_account">删除账号</string>
    <string name="input_your_name">输入您的名字</string>
    <string name="confirm">完成</string>
    <string name="update_fail">更新失败</string>
    <string name="update_success">更新成功</string>
    <string name="need_permission">此功能需要开启相关权限</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="settings">设置</string>
    <string name="today">今天</string>
    <string name="all">全部</string>
    <string name="week">一周以内</string>
    <string name="filter">过滤器</string>

    <!--CreateRecord-->
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="income_or_expense">收入或支出</string>
    <string name="money_type">交易方式</string>
    <string name="record_type">项目种类</string>
    <string name="record_date">记录时间</string>
    <string name="ok">确认</string>
    <string name="unit_price">单价</string>
    <string name="unit">单位</string>
    <string name="quantity">数量</string>
    <string name="total_money">总金额</string>
    <string name="extra_info">补充说明</string>
    <string name="yuan">元</string>
    <string name="space">:  </string>
</resources>
