<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:checked="true"
            android:icon="@drawable/ic_menu_all"
            android:title="@string/all" />
        <item
            android:id="@+id/nav_today"
            android:checked="true"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_week"
            android:checked="true"
            android:icon="@drawable/ic_menu_week"
            android:title="@string/week" />
        <item
            android:id="@+id/nav_filter"
            android:checked="true"
            android:icon="@drawable/ic_menu_filter"
            android:title="@string/filter" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

</menu>
