<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tao.note.ui.accountdetail.changepassword.ChangeUserPasswordViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/AccountDetailDialog.BackgroundStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AccountDetailDialog.TitleAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_password"
                    style="@style/AccountDetailDialog.PasswordAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:hint="@string/old_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password"
                    style="@style/AccountDetailDialog.PasswordAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:hint="@string/new_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                style="@style/AccountDetailDialog.MenuFormAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/AccountDetailDialog.MenuItemAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onCancelClick()}"
                    android:text="@string/cancel" />

                <TextView
                    style="@style/AccountDetailDialog.MenuItemAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onConfirmClick()}"
                    android:text="@string/confirm" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>