<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forget_psw_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/bottom_sheet_forget_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/find_psw"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/LightGrey" />

    <TextView
        android:id="@+id/bottom_sheet_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/verification_code_sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/LightGrey" />

    <TextView
        android:id="@+id/bottom_sheet_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="normal" />
</LinearLayout>
