<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.tao.note.ui.login.signin.SignInViewModel" />

    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginBottom="@dimen/margin_huge"
                android:text="@string/app_name" />

            <LinearLayout
                android:id="@+id/phone_login_form"
                style="@style/InputFormStyle"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    style="@style/InputFormImageStyle"
                    android:src="@drawable/ic_user" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/user_phone_number"
                        style="@style/InputFormNumStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_form"
                style="@style/InputFormStyle"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    style="@style/InputFormImageStyle"
                    android:src="@drawable/ic_password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_password"
                        style="@style/InputFormPasswordStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:hint="@string/password" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/phone_sign_in_button"
                style="@style/LoadingButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> viewModel.onServerLoginClick()}"
                android:text="@string/sign_in"
                app:finalCornerAngle="50dp"
                app:initialCornerAngle="50dp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="3dp" />

            <LinearLayout
                android:id="@+id/other_form"
                style="@style/InputFormStyle"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_small">

                <TextView
                    android:id="@+id/forget_tv"
                    style="@style/OtherOptionTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onResetPasswordClick()}"
                    android:text="@string/forget_password" />

                <TextView
                    android:id="@+id/sign_up_tv"
                    style="@style/OtherOptionTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onSignUpClick()}"
                    android:text="@string/sign_up_now"
                    android:textColor="@color/colorTheme" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>
