<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tao.note.ui.accountdetail.AccountDetailViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/account" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line_grey" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/avatar_form"
                    style="@style/ClickFunctionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/FunctionTitleTextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/avatar" />

                        <TextView
                            android:id="@+id/textView"
                            style="@style/FunctionContentTextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_image_as_avatar" />


                    </LinearLayout>

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/iv_profile_pic"
                        style="@style/FunctionImageStyle"
                        app:imageUrl="@{viewModel.avatarUrl}"
                        fresco:actualImageScaleType="focusCrop"
                        fresco:backgroundImage="@android:color/holo_blue_light"
                        fresco:placeholderImage="@drawable/ic_avatar_white"
                        fresco:placeholderImageScaleType="fitCenter"
                        fresco:roundAsCircle="true" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line_grey" />

                <LinearLayout
                    android:id="@+id/name_form"
                    style="@style/ClickFunctionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FunctionTitleTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <TextView
                        style="@style/FunctionContentTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.userName}" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line_grey" />

                <LinearLayout
                    android:id="@+id/phone_form"
                    style="@style/ClickFunctionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FunctionTitleTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number" />

                    <TextView
                        style="@style/FunctionContentTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.userPhoneNumber}" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line_grey" />

                <LinearLayout
                    android:id="@+id/password_form"
                    style="@style/ClickFunctionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FunctionTitleTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                    <TextView
                        style="@style/FunctionContentTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_your_passowrd" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line_grey" />

                <LinearLayout
                    android:id="@+id/delete_account_form"
                    style="@style/ClickFunctionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FunctionTitleTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_account" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line_grey" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>