<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tao.note.ui.accountdetail.AccountDetailViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/AccountDetailDialog.BackgroundStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AccountDetailDialog.TitleAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                style="@style/AccountDetailDialog.EditAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="@={viewModel.userPhoneNumber}" />

            <LinearLayout
                style="@style/AccountDetailDialog.MenuFormAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/AccountDetailDialog.MenuItemAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onCancelClick()}"
                    android:text="@string/cancel" />

                <TextView
                    style="@style/AccountDetailDialog.MenuItemAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onPhoneConfirmClick()}"
                    android:text="@string/confirm" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>